--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
 h1 {
-    color: hotpink;
-    font-family: cursive;
+    color: rgb(125, 12, 211);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
